# cookiecutter-pypackage

./: README.md  cookiecutter.json
.github/workflows/: build.yml  test.yml
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: build-docs.yml  test-and-check.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  modules.rst
