[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
force_sort_within_sections = true
line_length = 50
multi_line_output = 3  # https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
profile = "black"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "{{ cookiecutter.project_name }}/tests",
]